[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["full"] }  # Ensure tokio is using the full set of features
tokio-tungstenite = "0.18"  # Enable TLS feature
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
hex = "0.4.3"
url = "2.5"